--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension URI::PackageURL.
 
+1.01 2022-07-26
+    - Fix documentation and test prerequisite (JSON::PP)
+
 1.00 2022-07-25
     - First release of URI::PackageURL
