--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension URI::PackageURL.
 
+1.02 2022-07-31
+    - Fix decode when "namespace" component is undef
+
 1.01 2022-07-26
     - Fix documentation and test prerequisite (JSON::PP)
 
