--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension URI::PackageURL.
 
+2.04 2023-11-16
+    - Added "docker", "bitbuket", "golang" support to
+      "URI::PackageURL::Util::purl_to_urls"
+    - Added new options for create canonical purl string using "purl-tool(1)"
+      (giterlizzi/perl-URI-PackageURL#9)
+    - Added sample scripts
+    - Removed empty "qualifier" keys in "URI::PackageURL->from_string"
+
 2.03 2023-11-09
     - Improved validation during encode and decode "purl" string
     - Fixed CPAN repository URL
