--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
-Revision history for URI::PackageURL.
+Change history for URI-PackageURL
+
+2.20 2024-05-11
+    - Added support for the official "cpan" PURL type specification (giterlizzi/perl-URI-PackageURL#8)
+    - Added "Version Range" (vers) support
+    - Added "URI::VersionRange::Version::cpan" version comparator for "cpan" scheme
+    - Added "vers-tool(1)"
 
 2.11 2024-04-19
     - Improved the cpan PURL type to be compatible with the 'PURL-TYPES' specification
